--- a/index.html
+++ b/index.html
@@ -10,25 +10,39 @@
 </head>
 <body>
 
-<h1>Welcome to the Jukebox</h1>
+<div id="heading_container">
 
-<div id="now_playing_container">
+  <div id="now_playing_container">
 
-  <span id="now_playing_title"><strong>NOW PLAYING</strong></span>  
+    <span id="now_playing_title"><strong>NOW PLAYING</strong></span><br><br>
 
-  <span><strong>Song Name:</strong></span>
-  <div class="title" id="now_playing_name">Landing</div><br>
+    <span><strong>Song Name:</strong></span>
+    <div class="title" id="now_playing_name">Landing</div><br>
 
-  <span><strong>Song Artist:</strong></span>
-  <div class="title" id="now_playing_artist">Pigeons Playing Ping Pong</div><br>
+    <span><strong>Song Artist:</strong></span>
+    <div class="title" id="now_playing_artist">Pigeons Playing Ping Pong</div><br>
 
-</div>
+  </div>
 
-<div id="buttons">
+  <div id="greeting">
+    <h1>Welcome to the Jukebox</h1>
+  </div>
 
-  <audio id="song" src="songs/landing.mp3" type="audio/mpeg"></audio>
+  <div id="buttons">
 
-  <button id="play_pause"><img id="play_pause_image" src="images/play.svg"></button>
+    <audio id="song" src="songs/landing.mp3" type="audio/mpeg"></audio>
+
+    <button id="play_pause"><img id="play_pause_image" src="images/play.svg"></button>
+
+    <div class="progressBar">
+      <div class="timeBar"></div>
+    </div>
+
+    <div class="progressTime">
+      <strong>Progress: </strong><span class="current">0:00</span><strong> of </strong><span class="duration"></span>
+    </div>
+
+  </div>
 
 </div>
 
@@ -40,7 +54,7 @@
 
     <button class="indiv_song" id="one_more_time" data-list='{"name":"One More Time", "artist":"Daft Punk", "filename":"one_more_time.mp3", "filetype":"audio/mpeg"}'></button>
 
-    <button class="indiv_song" id="tweezer_reprise" data-list='{"name":"Tweezer Reprise", "artist":"Phish", "filename":"tweezer_reprise.mp3", "filetype":"audio/mp3"}'></button>
+    <button class="indiv_song" id="do_it_like_you_do" data-list='{"name":"Do It Like You Do", "artist":"Lettuce", "filename":"do_it_like_you_do.mp3", "filetype":"audio/mp3"}'></button>
 
   </div>
 
