Added back button

--- a/index.html
+++ b/index.html
@@ -30,13 +30,11 @@
 
     <div class="buttons_container">
 
-      <button id="play_pause" class="buttons"><img id="play_pause_image" class="button_image" src="images/play.svg"></button>
+      <button id="prev_song" class="buttons"><img id="prev_image"  class="button_image" src="images/prev.svg"></button>
 
       <button id="random" class="buttons"><img id="random_image" class="button_image" src="images/random.svg"></button>
 
-    <!-- </div> -->
-
-    <!-- <div class="buttons_container"> -->
+      <button id="play_pause" class="buttons"><img id="play_pause_image" class="button_image" src="images/play.svg"></button>
 
       <button id="stop" class="buttons"><img id="stop_image"  class="button_image" src="images/stop.png"></button>
 
