Added some fonts.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <script type="text/javascript" src="javascripts/jquery.js"></script>
   <script type="text/javascript" src="javascripts/main.js"></script>
   <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css">
+  <link href='https://fonts.googleapis.com/css?family=Handlee|Roboto' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
 </head>
 <body>
@@ -14,13 +15,13 @@
 
   <div id="now_playing_container">
 
-    <div id="now_playing_title"><strong>NOW PLAYING</strong></div>
+    <div id="now_playing_title" class="handlee_font"><strong>NOW PLAYING</strong></div>
 
-    <span><strong>Name:</strong></span>
-    <div class="title" id="now_playing_name">Landing</div>
+    <span class="handlee_font"><strong>Name:</strong></span>
+    <div class="title roboto_font" id="now_playing_name">Landing</div>
 
-    <span><strong>Artist:</strong></span>
-    <div class="title" id="now_playing_artist">Pigeons Playing Ping Pong</div><br>
+    <span class="handlee_font"><strong>Artist:</strong></span>
+    <div class="title roboto_font" id="now_playing_artist">Pigeons Playing Ping Pong</div><br>
 
   </div>
 
@@ -47,7 +48,7 @@
     </div>
 
     <div class="progressTime">
-      <span class="current">0:00</span> / <span class="duration"></span>
+      <span class="current roboto_font">0:00</span> / <span class="duration"></span>
     </div>
 
   </div>
