Applied media queries to make site responsive to mobile.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css">
   <link href='https://fonts.googleapis.com/css?family=Handlee|Roboto' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
@@ -17,11 +18,11 @@
 
     <div id="now_playing_title" class="handlee_font"><strong>NOW PLAYING</strong></div>
 
-    <span class="handlee_font"><strong>Name:</strong></span>
-    <div class="title roboto_font" id="now_playing_name">Landing</div>
+    <span class="handlee_font now_playing_display "><strong>Name:</strong></span>
+    <div class="now_playing_info roboto_font" id="now_playing_name">Landing</div>
 
-    <span class="handlee_font"><strong>Artist:</strong></span>
-    <div class="title roboto_font" id="now_playing_artist">Pigeons Playing Ping Pong</div><br>
+    <span class="handlee_font now_playing_display"><strong>Artist:</strong></span>
+    <div class="now_playing_info roboto_font" id="now_playing_artist">Pigeons Playing Ping Pong</div>
 
   </div>
 
